
// Create a class named AppConstants
class AppConstants {

  // Create a variable with a name avengerServiceBaseUrl of type static const and assign the String.
  static const avengerServiceBaseUrl = "http://192.168.206.80:9999/api";

  // Create a variable with a name avengerServiceGetAllAvengerEndPoint of type static const and assign the String.
  static const avengerServiceGetAllAvengerEndPoint = "/avengers";

  // Create a variable with a name avengerServiceCreateNewHeroEndPoint of type static const and assign the String.
  static const avengerServiceCreateNewHeroEndPoint = "/add/avengers";

  // Create a variable with a name avengerServiceEditHeroEndPoint of type static const and assign the String.
  static const avengerServiceEditHeroEndPoint = "/avengers";
  
}               